# macintosh-screensaver

./: Cargo.toml  README.md
animation/: config.toml
scripts/: colormap.py
shaders/: background.wgsl  common.wgsl  pixels.wgsl
src/: animation.rs  colormap.rs  interpolate.rs  lib.rs  main.rs  render.wgsl
src/animation/: colormap.rs  config.rs  mod.rs  properties.rs  timeline.rs
src/pipelines/: background.rs  mod.rs  pixel.rs
wayland/: Cargo.toml
wayland/src/: impls.rs  main.rs
