[package]
name = "macintosh_wallpaper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitvec = "1.0.1"
encase = { version = "0.10.0", features = ["nalgebra"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tufa = { path = "../tufa" }
nalgebra = { version = "0.33.2" ,features = ["serde-serialize"] }
